routes/static/routes/css/base.css
#loading {
  height: 100vh;
  width: 100vw;
  position: relative;
  opacity: 0.8;
  background: rgb(181, 209, 209);
  }
  
#loading-image {
  height: 80%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

/* Using display: flex to show...

#timetravel {
  height: 100vh;
  width: 100vw;
  display: none;
  justify-content: center;
  align-items: center;
  opacity: 0.7;
}

#timetravel-image {
  width: 100%;
  max-height: 100%;
} */

/* Using Transform method to center image */
#timetravel {
  height: 100vh;
  width: 100vw;
  position: relative;
  opacity: 0.7;
  background: Tomato;
}

#timetravel-image {
  width: 80%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/*
#map {
  padding-right: 15%;
}

@media screen and (max-width:1000px) {
  #map {
    padding-right: 10%;
    padding-top: 0%;
  }
}

@media screen and (max-width:800px) {
  #map {
    padding-right: 8%;
    padding-top: 0%;    }
}

@media screen and (max-width:700px) {
  #map {
    padding-right: 5%;
    padding-top: 0%;    }
}

@media screen and (max-width:500px) {
  #map {
    padding-right: 0%;
    padding-top: 0%;    }
}
*/

